# User-Service-EM

./: .env.example  .gitignore  README.MD  docker-compose.yml  playground.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2e63e3f0c3cd_init.py  7a54c2cd3593_added_superuser.py  d235e62b167d_changed_field_email_in_users.py  d77285f543be_renamed_to_is_admin.py  e5c9a0efbb74_create_users.py  f4efd1a6ebf8_added_is_active.py
app/: main.py
app/api/auth/: base_dao.py  custom_types.py  dao.py  dependencies.py  exception_handlers.py  models.py  permissions.py  responses.py  schemas.py  service.py  utils.py  views.py
app/api/auth/mock/: views.py
app/core/: config.py  custom_exceptions.py  register_handlers.py  response_templates.py  type_vars.py  utils.py
app/db/: base.py  dependencies.py  helper.py
